bug 1061170 - constrain the reflow-state's available inline size for an orthogonal flow. r=smontagu